Adjust build settings

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,4 +11,4 @@ install:
 script: php -d mbstring.func_overload=7 vendor/bin/phpunit --coverage-text --whitelist src/ tests/
 
 after_success:
-    - travis_retry php vendor/bin/coveralls
+    - travis_retry php vendor/bin/php-coveralls
