--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
     },
     "require-dev": {
         "php-coveralls/php-coveralls": "^2.0",
-        "phpunit/phpunit": "^7.0"
+        "phpunit/phpunit": "^6.0 || ^7.0"
     },
     "autoload": {
         "psr-4": {
