--- a/composer.json
+++ b/composer.json
@@ -16,8 +16,8 @@
         "php": ">=7.0"
     },
     "require-dev": {
-        "firehed/arctools": "^1",
-        "phpunit/phpunit": "^5.2"
+        "php-coveralls/php-coveralls": "^2.0",
+        "phpunit/phpunit": "^6.0 || ^7.0"
     },
     "autoload": {
         "psr-4": {
