--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,9 @@
     },
     "require-dev": {
         "php-coveralls/php-coveralls": "^2.0",
-        "phpunit/phpunit": "^6.0 || ^7.0"
+        "phpstan/phpstan": "^0.9.2",
+        "phpunit/phpunit": "^6.0 || ^7.0",
+        "squizlabs/php_codesniffer": "^3.2"
     },
     "autoload": {
         "psr-4": {
