Move CBOR to external package

--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
     ],
     "homepage": "https://github.com/Firehed/u2f-php",
     "require": {
-        "php": ">=7.0"
+        "php": ">=7.0",
+        "firehed/cbor": "dev-master"
     },
     "require-dev": {
         "php-coveralls/php-coveralls": "^2.0",
