Add new keywords to composer manifest

--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,9 @@
         "mfa",
         "security",
         "u2f",
+        "webauthn",
+        "web authentication",
+        "webauthentication",
         "yubico",
         "yubikey"
     ],
