--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,5 @@
 language: php
 php:
-  - '7.0'
-  - '7.1'
   - '7.2'
   - '7.3'
   - '7.4snapshot'
@@ -11,7 +9,7 @@ install:
   - travis_retry composer install --no-interaction --prefer-source
 
 script:
-  - php -d mbstring.func_overload=7 vendor/bin/phpunit --coverage-text --whitelist src/ tests/
+  - php vendor/bin/phpunit --coverage-text --whitelist src/ tests/
   - vendor/bin/phpcs src tests
   - vendor/bin/phpstan analyse --no-progress -l7 src tests
 
