--- a/composer.json
+++ b/composer.json
@@ -17,9 +17,10 @@
     },
     "require-dev": {
         "php-coveralls/php-coveralls": "^2.0",
-        "phpstan/phpstan": "^0.9.2",
-        "phpunit/phpunit": "^6.0 || ^7.0",
-        "squizlabs/php_codesniffer": "^3.2"
+        "phpstan/phpstan": "^0.11",
+        "phpunit/phpunit": "^8.0",
+        "squizlabs/php_codesniffer": "^3.2",
+        "spatie/phpunit-watcher": "^1.8"
     },
     "autoload": {
         "psr-4": {
