Make phpstan work with mocks

--- a/phpstan.neon
+++ b/phpstan.neon
@@ -1,3 +1,5 @@
+includes:
+    - vendor/phpstan/phpstan-phpunit/extension.neon
 parameters:
     excludes_analyse:
         - %rootDir%/../../../vendor
