phpstan ignore demo for now

--- a/phpstan.neon
+++ b/phpstan.neon
@@ -2,6 +2,7 @@ includes:
     - vendor/phpstan/phpstan-phpunit/extension.neon
 parameters:
     excludes_analyse:
+        - %rootDir%/../../../demo
         - %rootDir%/../../../vendor
     level: 7
     includes:
