--- a/phpstan.neon
+++ b/phpstan.neon
@@ -1,8 +1,8 @@
 includes:
     - vendor/phpstan/phpstan-phpunit/extension.neon
+    - vendor/phpstan/phpstan/conf/bleedingEdge.neon
 parameters:
-    excludes_analyse:
-        - %rootDir%/../../../vendor
-    level: 7
-    includes:
-        - vendor/phpstan/phpstan/conf/bleedingEdge.neon
+    level: max
+    paths:
+        - src
+        - tests
