--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -25,6 +25,9 @@ jobs:
           - '7.4'
           - '8.0'
           - '8.1'
+        exclude:
+          - php: '8.1'
+            dependencies: 'low'
 
     steps:
       - name: Check out code
