--- a/phpstan-baseline.neon
+++ b/phpstan-baseline.neon
@@ -11,6 +11,31 @@ parameters:
 			path: src/ClientData.php
 
 		-
+			message: "#^Cannot access offset 1 on array\\|false\\.$#"
+			count: 2
+			path: src/WebAuthn/AuthenticatorData.php
+
+		-
+			message: "#^Property Firehed\\\\U2F\\\\WebAuthn\\\\AuthenticatorData\\:\\:\\$extensions is unused\\.$#"
+			count: 1
+			path: src/WebAuthn/AuthenticatorData.php
+
+		-
+			message: "#^Offset \\-2 does not exist on array\\(1 \\=\\> int, \\-1 \\=\\> int, \\?\\-2 \\=\\> string, \\?\\-3 \\=\\> string, \\?\\-4 \\=\\> string, 3 \\=\\> \\-7\\)\\.$#"
+			count: 1
+			path: src/WebAuthn/RegistrationResponse.php
+
+		-
+			message: "#^Offset \\-3 does not exist on array\\(1 \\=\\> int, \\-1 \\=\\> int, \\?\\-2 \\=\\> string, \\?\\-3 \\=\\> string, \\?\\-4 \\=\\> string, 3 \\=\\> \\-7\\)\\.$#"
+			count: 1
+			path: src/WebAuthn/RegistrationResponse.php
+
+		-
+			message: "#^Offset 3 does not exist on array\\(1 \\=\\> int, \\?3 \\=\\> int, \\-1 \\=\\> int, \\?\\-2 \\=\\> string, \\?\\-3 \\=\\> string, \\?\\-4 \\=\\> string\\)\\.$#"
+			count: 1
+			path: src/WebAuthn/RegistrationResponse.php
+
+		-
 			message: "#^Method Firehed\\\\U2F\\\\FunctionsTest\\:\\:vectors\\(\\) should return array\\<array\\(string, string\\)\\> but returns array\\(array\\('', ''\\), array\\('f', 'Zg'\\), array\\('fo', 'Zm8'\\), array\\('foo', 'Zm9v'\\), array\\('foob', 'Zm9vYg'\\), array\\('fooba', 'Zm9vYmE'\\), array\\('foobar', 'Zm9vYmFy'\\), array\\(string\\|false, 'AA_BB\\-cc'\\)\\)\\.$#"
 			count: 1
 			path: tests/FunctionsTest.php
@@ -24,4 +49,19 @@ parameters:
 			message: "#^Method class@anonymous/tests/ResponseTraitTest\\.php\\:18\\:\\:parseResponse\\(\\) has parameter \\$response with no value type specified in iterable type array\\.$#"
 			count: 1
 			path: tests/ResponseTraitTest.php
+
+		-
+			message: "#^Offset \\-2 does not exist on array\\(1 \\=\\> int, \\-1 \\=\\> 1, 3 \\=\\> \\-7, \\?\\-2 \\=\\> string, \\?\\-3 \\=\\> string, \\?\\-4 \\=\\> string\\)\\.$#"
+			count: 1
+			path: tests/WebAuthn/AuthenticatorDataTest.php
+
+		-
+			message: "#^Offset \\-3 does not exist on array\\(1 \\=\\> int, \\-1 \\=\\> 1, 3 \\=\\> \\-7, \\?\\-3 \\=\\> string, \\?\\-4 \\=\\> string, \\-2 \\=\\> string\\)\\.$#"
+			count: 1
+			path: tests/WebAuthn/AuthenticatorDataTest.php
+
+		-
+			message: "#^Offset 3 does not exist on array\\(1 \\=\\> int, \\?3 \\=\\> int, \\-1 \\=\\> int, \\?\\-2 \\=\\> string, \\?\\-3 \\=\\> string, \\?\\-4 \\=\\> string\\)\\.$#"
+			count: 1
+			path: tests/WebAuthn/AuthenticatorDataTest.php
 
