--- a/phpstan.neon
+++ b/phpstan.neon
@@ -1,8 +1,12 @@
 includes:
     - phpstan-baseline.neon
+    - vendor/phpstan/phpstan-deprecation-rules/rules.neon
     - vendor/phpstan/phpstan-phpunit/extension.neon
+    # vendor/phpstan/phpstan-strict-rules/rules.neon
     - vendor/phpstan/phpstan/conf/bleedingEdge.neon
 parameters:
+    ignoreErrors:
+        - '#^Dynamic call to static method PHPUnit\\Framework\\Assert::assert#'
     level: max
     paths:
         - src
